--- a/greensource_pages/templates/greensource_pages/faq.html
+++ b/greensource_pages/templates/greensource_pages/faq.html
@@ -20,14 +20,14 @@
 <div id="accordion" class="container padding">
     <div class="FAQS row padding">
         <div class="col-12">
-            <h3>Solar Energy</h3>
+            <h2>Solar Energy</h2>
             <div class="card">
                 <div class="card-header" id="headingTen">
-                    <h5 class="mb-0">
+                    <p class="mb-0">
                         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseTen" aria-expanded="true" aria-controls="collapseTen">
                             Can I afford to go Solar?
                         </button>
-                    </h5>
+                    </p>
                 </div>
                 <div id="collapseTen" class="collapse show" aria-labelledby="headingTen" data-parent="#accordion">
                     <div class="card-body">
@@ -37,11 +37,11 @@
             </div>
             <div class="card">
                 <div class="card-header" id="headingOne">
-                    <h5 class="mb-0">
+                    <p class="mb-0">
                         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                             Is my roof suitable for solar panels?
                         </button>
-                    </h5>
+                    </p>
                 </div>
                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                     <div class="card-body">
@@ -52,11 +52,11 @@
             </div>
             <div class="card">
                 <div class="card-header" id="headingEleven">
-                    <h5 class="mb-0">
+                    <p class="mb-0">
                         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseEleven" aria-expanded="true" aria-controls="collapseEleven">
                             What size of solar energy system should i get?
                         </button>
-                    </h5>
+                    </p>
                 </div>
                 <div id="collapseEleven" class="collapse show" aria-labelledby="headingEleven" data-parent="#accordion">
                     <div class="card-body">
@@ -67,11 +67,11 @@
             </div>
             <div class="card">
                 <div class="card-header" id="headingNine">
-                    <h5 class="mb-0">
+                    <p class="mb-0">
                         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseNine" aria-expanded="true" aria-controls="collapseNine">
                             How do i choose a solar installer?
                         </button>
-                    </h5>
+                    </p>
                 </div>
                 <div id="collapseNine" class="collapse show" aria-labelledby="headingNine" data-parent="#accordion">
                     <div class="card-body">
@@ -81,11 +81,11 @@
             </div>
             <div class="card">
                 <div class="card-header" id="headingTwo">
-                    <h5 class="mb-0">
+                    <p class="mb-0">
                         <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                             How much will solar panel maintenance cost?
                         </button>
-                    </h5>
+                    </p>
                 </div>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                     <div class="card-body">
@@ -95,11 +95,11 @@
             </div>
             <div class="card">
                 <div class="card-header" id="headingThree">
-                    <h5 class="mb-0">
+                    <p class="mb-0">
                         <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                             Can i go off grid with solar panels?
                         </button>
-                    </h5>
+                    </p>
                 </div>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                     <div class="card-body">
@@ -110,11 +110,11 @@
             </div>
             <div class="card">
                 <div class="card-header" id="headingSix">
-                    <h5 class="mb-0">
+                    <p class="mb-0">
                         <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
                             Do my solar panels produce power when the sun isn't shinning?
                         </button>
-                    </h5>
+                    </p>
                 </div>
                 <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
                     <div class="card-body">
@@ -126,11 +126,11 @@
             </div>
             <div class="card">
                 <div class="card-header" id="headingFour">
-                    <h5 class="mb-0">
+                    <p class="mb-0">
                         <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                             Can I use my solar system with conventional grid system?
                         </button>
-                    </h5>
+                    </p>
                 </div>
                 <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
                     <div class="card-body">
@@ -141,11 +141,11 @@
             </div>
             <div class="card">
                 <div class="card-header" id="headingTwelve">
-                    <h5 class="mb-0">
+                    <p class="mb-0">
                         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseTwelve" aria-expanded="true" aria-controls="collapseTwelve">
                             How long will my solar power system last?
                         </button>
-                    </h5>
+                    </p>
                 </div>
 
                 <div id="collapseTwelve" class="collapse show" aria-labelledby="headingTwelve" data-parent="#accordion">
@@ -158,11 +158,11 @@
             </div>
             <div class="card">
                 <div class="card-header" id="headingFive">
-                    <h5 class="mb-0">
+                    <p class="mb-0">
                         <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                             How do solar photovoltaic panels work?
                         </button>
-                    </h5>
+                    </p>
                 </div>
                 <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
                     <div class="card-body">
@@ -173,11 +173,11 @@
             </div>
             <div class="card">
                 <div class="card-header" id="headingSeven">
-                    <h5 class="mb-0">
+                    <p class="mb-0">
                         <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
                             Is solar a smart investment?
                         </button>
-                    </h5>
+                    </p>
                 </div>
                 <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accordion">
                     <div class="card-body">
@@ -189,11 +189,11 @@
             </div>
             <div class="card">
                 <div class="card-header" id="headingEight">
-                    <h5 class="mb-0">
+                    <p class="mb-0">
                         <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
                             What are the financial benefits of solar energy?
                         </button>
-                    </h5>
+                    </p>
                 </div>
                 <div id="collapseEight" class="collapse" aria-labelledby="headingEight" data-parent="#accordion">
                     <div class="card-body">
