--- a/greensource_pages/templates/greensource_pages/project-details.html
+++ b/greensource_pages/templates/greensource_pages/project-details.html
@@ -27,7 +27,7 @@
 <div class="container padding">
     <div class="row project-details padding">
         <div class="folio col-12">
-            <img src="{{ obj.image.url }}" alt="img" />
+            <amp-img src="{{ obj.image.url }}" alt="img" width="600" height="400" layout="responsive"></amp-img>
         </div>
     </div>
 </div>
@@ -52,27 +52,27 @@
         <div class="owl-theme owl-carousel" id="project">
             <div class="item">
                 <a href="{{ obj.image1.url }}">
-                    <img src="{{ obj.image1.url }}" alt="img" />
+                    <amp-img src="{{ obj.image1.url }}" alt="img" width="300" height="250" layout="responsive"></amp-img>
                 </a>
             </div>
             <div class="item">
                 <a href="{{ obj.image2.url }}">
-                    <img src="{{ obj.image2.url }}" alt="img" />
+                    <amp-img src="{{ obj.image2.url }}" alt="img" width="300" height="250" layout="responsive"></amp-img>
                 </a>
             </div>
             <div class="item">
                 <a href="{{ obj.image3.url }}">
-                    <img src="{{ obj.image3.url }}" alt="img" />
+                    <amp-img src="{{ obj.image3.url }}" alt="img" width="300" height="250" layout="responsive"></amp-img>
                 </a>
             </div>
             <div class="item">
                 <a href="{{ obj.image4.url }}">
-                    <img src="{{ obj.image4.url }}" alt="img" />
+                    <amp-img src="{{ obj.image4.url }}" alt="img" width="300" height="250" layout="responsive"></amp-img>
                 </a>
             </div>
             <div class="item">
                 <a href="{{ obj.image5.url }}">
-                    <img src="{{ obj.image5.url }}" alt="img" />
+                    <amp-img src="{{ obj.image5.url }}" alt="img" width="300" height="250" layout="responsive"></amp-img>
                 </a>
             </div>
         </div>
