--- a/greensource_pages/templates/greensource_pages/about.html
+++ b/greensource_pages/templates/greensource_pages/about.html
@@ -466,7 +466,7 @@
         <div class="row team-area owl-carousel owl-theme" id="team-one">
             <div class="item">
                 <div class="wow fadeIn single-team" data-wow-duration="3s" data-wow-delay="1.2s" data-wow-offset="10">
-                    <img src="{% static 'images/ceo.webp' %}" alt="C.E.O">
+                    <img src="{% static 'images/ceo.webp' %}" alt="C.E.O" />
                     <div class="team-text">
                         <h5>Olumide Joseph</h5>
                         <p>Founder/CEO</p>
@@ -475,7 +475,7 @@
             </div>
             <div class="item">
                 <div class="wow fadeIn single-team" data-wow-duration="3s" data-wow-delay="0.6s" data-wow-offset="10">
-                    <img src="{% static 'images/onifade.webp' %}" alt="Marketing Lead">
+                    <img src="{% static 'images/onifade.webp' %}" alt="Marketing Lead" />
                     <div class="team-text">
                         <h5>Onifade Dolapo</h5>
                         <p>Social Media</p>
@@ -484,7 +484,7 @@
             </div>
             <div class="item">
                 <div class="wow fadeIn single-team" data-wow-duration="3s" data-wow-delay="0.6s" data-wow-offset="10">
-                    <img src="{% static 'images/tola.webp' %}" alt="Lead Engineer"> 
+                    <img src="{% static 'images/tola.webp' %}" alt="Lead Engineer" /> 
                     <div class="team-text">
                         <h5>Adeyemi Tola</h5>
                         <p>Installer</p>
